# ansible-docker-ce

./: .ansible-lint  .gitignore  .travis.yml  .yamllint  README.md  ansible.cfg  pyproject.toml  requirements.txt
.github/workflows/: main.yml  uv-setup.yml
.github/workflows/legacy-workflows /: main.yml
defaults/: main.yml
meta/: argument_specs.yml  main.yml
molecule/default/: converge.yml  molecule.yml
molecule/edge/: converge.yml  molecule.yml
molecule/nightly/: converge.yml  molecule.yml
molecule/stable/: converge.yml  converge_old.yml  molecule.yml
molecule/test/: converge.yml
tasks/: main.yml
tests/: test.yml
vars/: main.yml
