[project]
name = "ansible-docker-ce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible-core>=2.20.2",
    "molecule>=26.2.0",
    "molecule-plugins[docker]>=25.8.12",
]

[dependency-groups]
dev = [
    "ansible-lint>=26.1.1",
]
